--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.username=${DATABASE_USERNAME:ukieTux}
+spring.datasource.password=${DATABASE_PASSWORD:sembaran6}
+spring.datasource.url= ${DATABASE_URL:jdbc:mysql://${MYSQL_HOST:localhost}:3307/zeinholistic}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
