--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.data.web.pageable.one-indexed-parameters=true
+management.endpoints.web.cors.allowed-origins=http://localhost:62180
+management.endpoints.web.cors.allowed-methods=GET,POST,PUT,DELETE
