--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.data.web.pageable.one-indexed-parameters=true
-management.endpoints.web.cors.allowed-origins=http://localhost:8181
+management.endpoints.web.cors.allowed-origins=*
 management.endpoints.web.cors.allowed-methods=GET,POST,PUT,DELETE
+spring.jpa.properties.hibernate.jdbc.time_zone=GMT+8
