--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.username=${DATABASE_USERNAME:ukieTux}
 spring.datasource.password=${DATABASE_PASSWORD:sembaran6}
-spring.datasource.url=${DATABASE_URL:jdbc:mysql://${MYSQL_HOST:localhost}:3307/zeinholistic}
+spring.datasource.url=${DATABASE_URL:jdbc:mysql://${MYSQL_HOST:localhost}:3307/zeinholistic?serverTimezone=Asia/Makassar}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
@@ -8,3 +8,4 @@ spring.data.web.pageable.one-indexed-parameters=true
 management.endpoints.web.cors.allowed-origins=*
 management.endpoints.web.cors.allowed-methods=GET,POST,PUT,DELETE
 spring.jpa.properties.hibernate.jdbc.time_zone=GMT+8
+spring.jackson.time-zone=Asia/Makassar
